# youvk-pullpush

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  youvk-pullpush.spec
src/: main_tkinter.py
src/auth/: vk_oauth.py
src/cli/: main.py
src/core/: queue.py  vk.py  youtube.py
src/gui/: app.py  app_tkinter.py
